// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CMultiSelectOptions customize 1`] = `
<div>
  <div
    class="form-multi-select-options"
    style="max-height: 200; overflow: scroll;"
  >
    <div
      class="form-multi-select-option form-multi-select-option-with-checkbox form-multi-selected disabled"
    >
      text1
    </div>
    <div
      class="form-multi-select-option form-multi-select-option-with-checkbox"
    >
      text3
    </div>
  </div>
</div>
`;

exports[`loads and displays CMultiSelectOptions component 1`] = `
<div>
  <div
    class="form-multi-select-options"
    style="overflow: scroll;"
  >
    <div
      class="form-multi-select-options-empty"
    >
      some no result label
    </div>
  </div>
</div>
`;
